--- a/index.html
+++ b/index.html
@@ -480,108 +480,7 @@
             <div class="teamMebberItem">
               <div class="media">
                 <div class="img">
-                  <!-- <img src="./images/team-01.jpg" alt="photo"> -->
-                </div>
-                <ul class="listNone">
-                  <li><i class="fab fa-facebook-f"></i></li>
-                  <li><i class="fab fa-twitter"></i></li>
-                  <li><i class="fab fa-linkedin-in"></i></li>
-                  <li><i class="fab fa-youtube"></i></li>
-                </ul>
-              </div>
-              <div class="content">
-
-              </div>
-            </div>
-
-
-            <div class="teamMebberItem">
-              <div class="media">
-                <div class="img">
-                  <!-- <img src="./images/team-01.jpg" alt="photo"> -->
-                </div>
-                <ul class="listNone">
-                  <li><i class="fab fa-facebook-f"></i></li>
-                  <li><i class="fab fa-twitter"></i></li>
-                  <li><i class="fab fa-linkedin-in"></i></li>
-                  <li><i class="fab fa-youtube"></i></li>
-                </ul>
-              </div>
-              <div class="content">
-              </div>
-            </div>
-
-
-            <div class="teamMebberItem">
-              <div class="media">
-                <div class="img">
-                  <!-- <img src="./images/team-01.jpg" alt="photo"> -->
-                </div>
-                <ul class="listNone">
-                  <li><i class="fab fa-facebook-f"></i></li>
-                  <li><i class="fab fa-twitter"></i></li>
-                  <li><i class="fab fa-linkedin-in"></i></li>
-                  <li><i class="fab fa-youtube"></i></li>
-                </ul>
-              </div>
-              <div class="content">
-              </div>
-            </div>
-
-
-            <div class="teamMebberItem">
-              <div class="media">
-                <div class="img">
-                  <!-- <img src="./images/team-01.jpg" alt="photo"> -->
-                </div>
-                <ul class="listNone">
-                  <li><i class="fab fa-facebook-f"></i></li>
-                  <li><i class="fab fa-twitter"></i></li>
-                  <li><i class="fab fa-linkedin-in"></i></li>
-                  <li><i class="fab fa-youtube"></i></li>
-                </ul>
-              </div>
-              <div class="content">
-              </div>
-            </div>
-
-
-            <div class="teamMebberItem">
-              <div class="media">
-                <div class="img">
-                  <!-- <img src="./images/team-01.jpg" alt="photo"> -->
-                </div>
-                <ul class="listNone">
-                  <li><i class="fab fa-facebook-f"></i></li>
-                  <li><i class="fab fa-twitter"></i></li>
-                  <li><i class="fab fa-linkedin-in"></i></li>
-                  <li><i class="fab fa-youtube"></i></li>
-                </ul>
-              </div>
-              <div class="content">
-              </div>
-            </div>
-
-
-            <div class="teamMebberItem">
-              <div class="media">
                   <img src="./images/team-01.jpg" alt="photo">
-                <ul class="listNone">
-                  <li><i class="fab fa-facebook-f"></i></li>
-                  <li><i class="fab fa-twitter"></i></li>
-                  <li><i class="fab fa-linkedin-in"></i></li>
-                  <li><i class="fab fa-youtube"></i></li>
-                </ul>
-              </div>
-              <div class="content">
-              </div>
-            </div>
-
-
-            <div class="teamMebberItem">
-              <div class="media">
-                <div class="img">
-                  <!-- <img src="./images/team-01.jpg" alt="photo"> -->
                 </div>
                 <ul class="listNone">
                   <li><i class="fab fa-facebook-f"></i></li>
@@ -591,6 +490,123 @@
                 </ul>
               </div>
               <div class="content">
+                <h2 class="capitalize Blue">name</h2>
+<p>Simple Short Description </p>
+
+              </div>
+            </div>
+
+
+            <div class="teamMebberItem">
+              <div class="media">
+                <div class="img">
+                  <img src="./images/team-02.jpg" alt="photo">
+                </div>
+                <ul class="listNone">
+                  <li><i class="fab fa-facebook-f"></i></li>
+                  <li><i class="fab fa-twitter"></i></li>
+                  <li><i class="fab fa-linkedin-in"></i></li>
+                  <li><i class="fab fa-youtube"></i></li>
+                </ul>
+              </div>
+              <div class="content">
+                <h2 class="capitalize Blue">name</h2>
+<p>Simple Short Description </p>
+              </div>
+            </div>
+
+
+            <div class="teamMebberItem">
+              <div class="media">
+                <div class="img">
+                  <img src="./images/team-03.jpg" alt="photo">
+                </div>
+                <ul class="listNone">
+                  <li><i class="fab fa-facebook-f"></i></li>
+                  <li><i class="fab fa-twitter"></i></li>
+                  <li><i class="fab fa-linkedin-in"></i></li>
+                  <li><i class="fab fa-youtube"></i></li>
+                </ul>
+              </div>
+              <div class="content">
+                <h2 class="capitalize Blue">name</h2>
+<p>Simple Short Description </p>
+              </div>
+            </div>
+
+
+            <div class="teamMebberItem">
+              <div class="media">
+                <div class="img">
+                  <img src="./images/team-04.jpg" alt="photo">
+                </div>
+                <ul class="listNone">
+                  <li><i class="fab fa-facebook-f"></i></li>
+                  <li><i class="fab fa-twitter"></i></li>
+                  <li><i class="fab fa-linkedin-in"></i></li>
+                  <li><i class="fab fa-youtube"></i></li>
+                </ul>
+              </div>
+              <div class="content">
+                <h2 class="capitalize Blue">name</h2>
+<p>Simple Short Description </p>
+              </div>
+            </div>
+
+
+            <div class="teamMebberItem">
+              <div class="media">
+                <div class="img">
+                  <img src="./images/team-05.png" alt="photo">
+                </div>
+                <ul class="listNone">
+                  <li><i class="fab fa-facebook-f"></i></li>
+                  <li><i class="fab fa-twitter"></i></li>
+                  <li><i class="fab fa-linkedin-in"></i></li>
+                  <li><i class="fab fa-youtube"></i></li>
+                </ul>
+              </div>
+              <div class="content">
+
+                <h2 class="capitalize Blue">name</h2>
+<p>Simple Short Description </p>
+              </div>
+            </div>
+
+
+            <div class="teamMebberItem">
+              <div class="media">
+                <div class="img">
+                  <img src="./images/team-06.png" alt="photo">
+                </div>                  <ul class="listNone">
+                  <li><i class="fab fa-facebook-f"></i></li>
+                  <li><i class="fab fa-twitter"></i></li>
+                  <li><i class="fab fa-linkedin-in"></i></li>
+                  <li><i class="fab fa-youtube"></i></li>
+                </ul>
+              </div>
+              <div class="content">
+                <h2 class="capitalize Blue">name</h2>
+                <p>Simple Short Description </p>
+              </div>
+            </div>
+
+
+            <div class="teamMebberItem">
+              <div class="media">
+                <div class="img">
+                  <img src="./images/team-07.jpg" alt="photo">
+                </div>
+                <ul class="listNone">
+                  <li><i class="fab fa-facebook-f"></i></li>
+                  <li><i class="fab fa-twitter"></i></li>
+                  <li><i class="fab fa-linkedin-in"></i></li>
+                  <li><i class="fab fa-youtube"></i></li>
+                </ul>
+              </div>
+              <div class="content">
+                <h2 class="capitalize Blue">name</h2>
+<p>Simple Short Description </p>
               </div>
             </div>
 
@@ -604,6 +620,253 @@
 
 
 
+      <!-- ======== Start          Services======= -->
+
+      <div class="services">
+        <div class="container">
+          <div class="btnContainerPostion">
+            <h2 class=" capitalize btn btnanimation p-10">services</h2>
+          </div>
+          <div class="servicesItems  mt-100">
+
+
+              <div class="servicesItem">
+                  <div class="itemContent">
+                    <i class="fas fa-palette icon" style="text-align: center;"></i>
+                    <h3 class="capitalize  ">security</h3>
+                  </div>
+
+                  <div class="itemFooter">
+                    <h3>01</h3>
+                    <a class="capitalize deletDesign"href="#">details</a>
+                  </div>
+              </div>
+
+
+              <div class="servicesItem">
+                <div class="itemContent">
+                  <i class="fas fa-tools icon" style="text-align: center;"></i>
+                  <h3 class="capitalize  ">fixing issues</h3>
+                </div>
+                <div class="itemFooter">
+                  <h3>02</h3>
+                  <a class="capitalize deletDesign"href="#">details</a>
+                </div>
+            </div>
+
+
+
+            <div class="servicesItem">
+              <div class="itemContent">
+                <i class="fas fa-map-marked icon" style="text-align: center;"></i>
+                <h3 class="capitalize  ">location</h3>
+              </div>
+              <div class="itemFooter">
+                <h3>03</h3>
+                <a class="capitalize deletDesign"href="#">details</a>
+              </div>
+          </div>
+
+
+
+          <div class="servicesItem">
+            <div class="itemContent">
+              <i class="fas fa-laptop-code icon" style="text-align: center;"></i>
+              <h3 class="capitalize  ">coding</h3>
+            </div>
+            <div class="itemFooter">
+              <h3>04</h3>
+              <a class="capitalize deletDesign"href="#">details</a>
+            </div>
+        </div>
+
+
+        <div class="servicesItem">
+          <div class="itemContent">
+            <!-- <i class="fas fa-megaphone"></i> -->
+            <i class="fas fa-bullhorn icon"  ></i>
+            <h3 class="capitalize  ">markting</h3>
+          </div>
+          <div class="itemFooter">
+            <h3>05</h3>
+            <a class="capitalize deletDesign"href="#">details</a>
+          </div>
+      </div>
+
+
+
+
+<div class="servicesItem">
+    <div class="itemContent">
+      <i class="fas fa-bookmark icon"></i>
+
+        <h3 class="capitalize  ">goals</h3>
+    </div>
+    <div class="itemFooter">
+      <h3>06</h3>
+      <a class="capitalize deletDesign"href="#">details</a>
+    </div>
+</div>
+
+
+          </div>
+          </div>
+        </div>
+
+
+      <!-- ======== End          Services ======== -->
+      
+      <!-- ======== Start          ouerSkills ======== -->
+
+      <div class="ouerSkills">
+        <div class="container">
+          <div class="btnContainerPostion">
+            <h2 class=" capitalize btn btnanimation p-10">ouer skills</h2>
+          </div>
+          <div class="ouerSkillsItems  mt-100">
+            <div class="img">
+              <img src="./images/megamenu.png"alt="photo"/>
+            </div>
+            <div style="width: 100%">
+            <div class="ouerSkillsItem">
+              <div class="labelHeader">
+                <h4 class="title upperCase" >html</h4>
+                <p class="number">80%</p>
+              </div>
+              <div class="label"></div>
+            </div>
+
+            <div class="ouerSkillsItem">
+              <div class="labelHeader">
+                <h4 class="title upperCase" >css</h4>
+                <p class="number">85%</p>
+              </div>
+              <div class="label"></div>
+            </div>
+
+
+            <div class="ouerSkillsItem">
+              <div class="labelHeader">
+                <h4 class="title capitalize" >javaScript</h4>
+                <p class="number">75%</p>
+              </div>
+              <div class="label"></div>
+            </div>
+
+            <div class="ouerSkillsItem">
+              <div class="labelHeader">
+                <h4 class="title capitalize" >python</h4>
+                <p class="number">80%</p>
+              </div>
+              <div class="label"></div>
+            </div>
+</div>
+          </div>
+        </div>
+      </div>
+      <!-- ======== End          ouerSkills ======== -->
+
+
+
+
+
+
+      <!-- ======== Start          how it work ======== -->
+
+
+      <div class="howItWorks">
+        <div class="container">
+          <div class="btnContainerPostion">
+            <h2 class=" capitalize btn btnanimation p-10">  how it work </h2>
+          </div>
+          <div class="howItWorksItems  mt-100">
+            <div class="imgOfSEction">
+               <img src="./images/work-steps.png" alt="photo">
+            </div>
+
+            <div class="howItWorksItemContainer">
+
+              <div class="howItWorksItem">
+                <div class="img">
+                  <img src="./images/work-steps-1.png" alt="">
+                </div>
+                <div class="howItWorksContent">
+                  <h3 class="capitalize">business analysis                  </h3>
+                  <p class="pColor">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+                </div>
+                <span></span>
+              </div>
+
+
+
+              <div class="howItWorksItem">
+                <div class="img">
+                  <img src="./images/work-steps-2.png" alt="">
+                </div>
+                <div class="howItWorksContent">
+                  <h3 class="capitalize">business analysis                  </h3>
+                  <p class="pColor">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+                </div>
+                <span></span>
+
+              </div>
+
+
+
+
+              <div class="howItWorksItem">
+                <div class="img">
+                  <img src="./images/work-steps-3.png" alt="">
+                </div>
+                <div class="howItWorksContent">
+                  <h3 class="capitalize">business analysis                  </h3>
+                  <p class="pColor">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+                </div>
+                <span></span>
+
+              </div>
+
+
+
+              <!-- <div class="howItWorksItem"> -->
+                <!-- <div class="img"> -->
+                  <!-- <img src="./images/skills-02.jpg" alt=""> -->
+                <!-- </div> -->
+                <!-- <div class="howItWorksContent"> -->
+                  <!-- <h3 class="capitalize">business analysis                  </h3> -->
+                  <!-- <p class="pColor">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p> -->
+                <!-- </div> -->
+              <!-- </div> -->
+
+
+
+
+
+
+
+
+
+            </div>
+          </div>
+          </div>
+        </div>
+
+      <!-- ======== End            how it work ======== -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script src="./js/index.js"></script>
 </body>
 
 </html>
